<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorBackground">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/setting_marging_layout">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_ctext_layout"
            android:layout_marginBottom="@dimen/margin_ctext_layout"
            android:background="@color/colorItem">

            <EditText
                android:id="@+id/serverAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/server"
                android:inputType="textUri"
                android:maxLines="1"
                android:textSize="@dimen/text_size_standart" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_ctext_layout"
            android:background="@color/colorItem">

            <EditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:inputType="none"
                android:maxLines="1"
                android:textSize="@dimen/text_size_standart"
                android:enabled="false"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_ctext_layout"
            android:background="@color/colorItem">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeActionLabel="Ок"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/text_size_standart" />

        </android.support.design.widget.TextInputLayout>

      <Switch
        android:id="@+id/using_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:textOff="@string/questions_answer_no"
        android:textOn="@string/questions_answer_yes"
        android:text="@string/using_scan_mode"
        android:textSize="@dimen/text_size_standart"
        android:textColor="@color/colorAccent"
        android:layout_alignParentRight="true"
        android:button="@null"
        android:paddingBottom="@dimen/margin_ctext_layout"
        android:paddingTop="@dimen/margin_ctext_layout"/>

       <Switch
            android:id="@+id/using_ext_storage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:enabled="false"
            android:textOff="@string/questions_answer_no"
            android:textOn="@string/questions_answer_yes"
            android:text="@string/using_ext_storage"
            android:textSize="@dimen/text_size_standart"
            android:textColor="@color/colorAccent"
            android:layout_alignParentRight="true"
            android:button="@null"
            android:paddingBottom="@dimen/margin_ctext_layout"
            android:paddingTop="@dimen/margin_ctext_layout"/>

    </LinearLayout>

</LinearLayout>