<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/old_data"
            android:textColor="@color/colorItem"
            android:textSize="@dimen/message_activity_text_title"
            android:layout_margin="@dimen/message_activity_margin"/>

        <TextView
            android:id="@+id/textMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/need_sync"
            android:textColor="@color/colorItem"
            android:textSize="@dimen/message_activity_text_message"
            android:layout_margin="@dimen/message_activity_margin"/>

    </LinearLayout>

    <View
        android:layout_width="0.5dip"
        android:layout_height="40dip"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        android:background="@color/colorItem"/>

    <Button
        android:id="@+id/buttonMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exchange"
        android:background="@null"
        android:layout_weight="4.5"
        android:textColor="@color/colorItem"
        android:textSize="@dimen/message_activity_text_button"
        android:layout_margin="@dimen/message_activity_margin"/>

</LinearLayout>