<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorBackground">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_ctext_layout"
            android:layout_marginBottom="@dimen/margin_ctext_layout"
            android:background="@color/colorItem"
            android:id="@+id/serverAddresslayout">

            <EditText
                android:id="@+id/serverAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/server"
                android:inputType="textUri"
                android:maxLines="1"
                android:textSize="@dimen/text_size_standart"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_ctext_layout"
            android:background="@color/colorItem">

            <AutoCompleteTextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textSize="@dimen/text_size_standart"
                android:drawableRight="@android:drawable/ic_menu_more"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_ctext_layout"
            android:background="@color/colorItem">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="Ок"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/text_size_standart" />

        </android.support.design.widget.TextInputLayout>

</LinearLayout>