<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/colorBackground"
              android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_line_up"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:clickable="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1.5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/list_service_done_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginRight="1.5dp"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/basic_text_size_cap"/>

                    <CheckBox
                        android:id="@+id/list_service_done_isresult"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginLeft="1.5dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:text="@string/service_item_done"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text_size_standart"/>
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorItem">

                <EditText
                    android:id="@+id/list_service_done_live"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/service_item_live"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="@dimen/text_size_standart"
                    android:textColor="@color/colorAccent"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorItem">

                <EditText
                    android:id="@+id/list_service_done_normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/service_item_normal"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="@dimen/text_size_standart"
                    android:textColor="@color/colorAccent"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorItem">

                <EditText
                    android:id="@+id/list_service_done_weak"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/service_item_weak"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="@dimen/text_size_standart"
                    android:textColor="@color/colorAccent"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorItem">

                <EditText
                    android:id="@+id/list_service_done_death"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/service_item_death"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="@dimen/text_size_standart"
                    android:textColor="@color/colorAccent"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorItem">

                <EditText
                    android:id="@+id/list_service_done_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/service_item_weight"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:textSize="@dimen/text_size_standart"
                    android:textColor="@color/colorAccent"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorItem">

                <EditText
                    android:id="@+id/list_service_done_mummy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/service_item_mummy"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:textSize="@dimen/text_size_standart"/>

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@color/colorItem">

            <EditText
                android:id="@+id/list_service_done_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/service_item_note_name"
                android:maxLines="1"
                android:textSize="@dimen/text_size_standart"
                android:textColor="@color/colorAccent"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>